Add missing paranthesis - from Kurt Lidl in PR port-vax/41316